--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-phone-number-input": "^3.4.14",
     "stripe": "^20.3.1"
   },
   "devDependencies": {
